# ChangeLog for x11-proto/damageproto
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/damageproto/ChangeLog,v 1.34 2007/10/09 09:43:56 dberkholz Exp $

  09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  -damageproto-1.0.3.ebuild:
  Drop old ebuilds.

  27 May 2007; Joshua Kinard <kumba@gentoo.org> damageproto-1.1.0.ebuild:
  Stable on mips.

  22 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  damageproto-1.1.0.ebuild:
  ppc stable, bug #174959

  20 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  damageproto-1.1.0.ebuild:
  stable amd64, bug 174959

  18 Apr 2007; Raúl Porcel <armin76@gentoo.org> damageproto-1.1.0.ebuild:
  ia64 + x86 stable wrt bug 174959

  18 Apr 2007; Ferris McCormick <fmccor@gentoo.org> ChangeLog:
  Try to fix digest.

  18 Apr 2007; Jose Luis Rivero <yoswink@gentoo.org>
  damageproto-1.1.0.ebuild:
  Stable on alpha wrt bug #174959

  18 Apr 2007; Markus Rothe <corsair@gentoo.org> damageproto-1.1.0.ebuild:
  Stable on ppc64; bug #174959

  18 Apr 2007; Jeroen Roovers <jer@gentoo.org> damageproto-1.1.0.ebuild:
  Stable for HPPA (bug #174959).

  17 Apr 2007; Ferris McCormick <fmccor@gentoo.org> ChangeLog:
  Stable on sparc --- needed for Bug #174959

*damageproto-1.1.0 (14 Jan 2007)

  14 Jan 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  +damageproto-1.1.0.ebuild:
  Version bump.  Adds support for damage reporting from direct rendering.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> damageproto-1.0.3.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> damageproto-1.0.3.ebuild:
  Mark 1.0.3 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  damageproto-1.0.3.ebuild:
  arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  damageproto-1.0.3.ebuild:
  ppc/sparc/mips/alpha stable

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  damageproto-1.0.3.ebuild:
  Stable on amd64.
