@@ -1,4 +1,4 @@
 DIST damageproto-1.1.0.tar.bz2 41449 RMD160 03b5c7a82e71cdb81fbce9e771f9349caf7c4d34 SHA1 5c8b96af09ff053912650343bf150989ec6747e8 SHA256 9d2684fac835e9cdf78befff2a58292f54db90094acbfb9f2ed5316fa30d641d
-EBUILD damageproto-1.1.0.ebuild 501 RMD160 f489dfb35b3c5c3951a667a72960f88707469141 SHA1 c8f2f27e2c343c241f729fce32e2b9a055180400 SHA256 6885a0afd29d582e1764e0635cb3676a8352294f7fc7a7b3901ef222d666e445
-MISC ChangeLog 3947 RMD160 26fc65b2aef945e3d363ac53f212776888da5d8e SHA1 82d8980e3ca261310af3aad2ac9d9851a8ee08b5 SHA256 7d5b43609e906213a32e256286d592eb4aa0892ee4f1285dc0707c1fdc65f9f1
+EBUILD damageproto-1.1.0.ebuild 507 RMD160 0b5206c1ce7a43b06362799a0184b942506f3580 SHA1 ad8f180c6f018e5c50cea08e6b4c990f98033b65 SHA256 9fa9bb163784415e9e864f5fd7c7beea60c65d67189ac5a503ba364a7dfe4240
+MISC ChangeLog 4050 RMD160 3adbe7f95918895960e5efd901ef883438940938 SHA1 cd0678d0a87049e73b40c26c91a12ffb4495bd1b SHA256 1917919da5b6d691a50813efff1a879cb6418df3f22579d305b41d24d28e3cde
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
