@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/damageproto/damageproto-1.1.0.ebuild,v 1.10 2007/06/24 22:24:20 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/damageproto/damageproto-1.1.0.ebuild,v 1.11 2009/05/05 15:01:59 fauli Exp $
 
 # Must be before x-modular eclass is inherited
 #SNAPSHOT="yes"
@@ -10,6 +10,6 @@ inherit x-modular
 DESCRIPTION="X.Org Damage protocol headers"
 
 KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
-
+IUSE=""
 RDEPEND=""
 DEPEND="${RDEPEND}"
